Fix double admin bar visible in some breakpoints (see https://github.com/WordPress/playground-tools/pull/228#issuecomment-2065333776)

--- a/packages/playground/assets/css/playground.css
+++ b/packages/playground/assets/css/playground.css
@@ -14,8 +14,8 @@
 .tools_page_playground #wpbody {
 	position: initial;
 }
-.tools_page_playground #wpadminbar {
-	display: none;
+html.wp-toolbar {
+	padding: inherit;
 }
 
 #wp-playground-toolbar {
